--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <%- css("main") %>
-
+  <script type="text/javascript">window.SOCKET_PORT = <%= port %></script>
   <title></title>
 </head>
 <body>
