--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -5,12 +5,11 @@ body {
   margin: 0;
 }
 
-.circle {
+.touch-point {
   position: absolute;
   width: 40px;
   height: 40px;
   border-radius: 100%;
-  background: rgba(255, 0, 0, 0.3);
 
   opacity: 0;
   -webkit-transition: opacity 0.25s;
